# Bricktales_AI

./: .gitignore  README.md  database_sql_v4.0.sql  index.html  main.ipynb  main.py  n8n_workflow.json  popup.html  price_recommendations_boq_1.csv  price_recommendations_boq_2.csv  pyproject.toml
agents/: __init__.py  base_agent.py  gemini_tools.py  item_extractor.py
config/: env_loader.py
connections/: db_init.py  postgres_connection.py
core/: __init__.py  settings.py
db_creation/: database_sql_v1.0.sql  database_sql_v2.0.sql  database_sql_v3.0.sql  database_v1.0.json  database_v2.0.json
docs/: index.html
embedding/: embedding.py
estimate/: estimate_v1.0.py  estimate_v2.0.py
input_files/: boq_2.xlsx
models/: __init__.py  domain.py  dto.py  estimate_boq.py  estimate_boq_models.py  project_models.py  store_boq.py  store_boq_models.py  tbe_dto.py  tender_models.py
repositories/: __init__.py  estimate_boq.py  price.py  price_repository.py  store_boq.py  store_boq_repository.py  tbe_boq_repository.py  tender.py
routers/: __init__.py  estimate_boq.py  price_routes.py  store_boq.py  store_boq_routes.py  tbe_boq_routes.py  tender.py
semantic_search/: semantic_search_v1.0.py  semantic_search_v2.0.py  semantic_search_v2.1.py
services/: __init__.py  estimate_boq.py  pattern_matcher.py  price_fetcher.py  store_boq.py  store_boq_processor.py  tbe_boq_processor.py  tender.py
storage/: storage_v1.0.py  storage_v2.0.py  storage_v3.0.py  to_be_estimated.py
storage_input_files/: boq_3.xlsx  sample.xlsx
tasks/: background_tasks.py
utils/: embedding_utils.py  (+3 more)
(+52 files in other folders)
