[project]
name = "item-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.0.1",
    "openai>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.11",
    "vertexai>=1.71.1",
    "xlsxwriter>=3.2.9",
]
