[project]
name = "bricktales-ai-boq"
version = "2.0.0"
description = "AI-powered Bill of Quantities processing system with SQLAlchemy ORM"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.3.11",
    "openai>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.38.0",
    "vertexai>=1.71.1",
    "xlsxwriter>=3.2.9",
]

[tool.uvicorn]
module = "main:app"
reload = true
host = "127.0.0.1"
port = 8000
